--- a/06_exercises.Rmd
+++ b/06_exercises.Rmd
@@ -80,14 +80,16 @@ Once your repository is created, you should always open your **project** rather 
   2. Read in the fake garden harvest data. Find the data [here](https://github.com/llendway/scraping_etc/blob/main/2020_harvest.csv) and click on the `Raw` button to get a direct link to the data. 
   
 ```{r}
-fake_harvest <- read_csv("https://raw.githubusercontent.com/llendway/scraping_etc/main/2020_harvest.csv")
+fake_harvest <- read_csv("https://raw.githubusercontent.com/llendway/scraping_etc/main/2020_harvest.csv", 
+    col_types = cols(X1 = col_skip(), weight = col_number()), 
+    na = "MISSING", skip = 2)
 ```
   
   
   3. Read in this [data](https://www.kaggle.com/heeraldedhia/groceries-dataset) from the kaggle website. You will need to download the data first. Save it to your project/repo folder. Do some quick checks of the data to assure it has been read in appropriately.
   
 ```{r}
-kaggle <- read_csv("https://raw.githubusercontent.com/llendway/scraping_etc/main/2020_harvest.csv")
+kaggle <- read_csv("Groceries_dataset.csv")
 ```
   
 
@@ -102,8 +104,9 @@ colors = scales::col_numeric(
 
 
 
-
   5. Create a table using `gt` with data from your project or from the `garden_harvest` data if your project data aren't ready.
+  
+  
   
   6. Use `patchwork` operators and functions to combine at least two graphs using your project data or `garden_harvest` data if your project data aren't read.
   
